--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.3
   font_awesome_flutter: ^10.12.0
+  
+  dots_indicator: ^4.0.1
+  video_player: ^2.10.1
+  animated_notch_bottom_bar: ^1.0.3
+  
+  
+
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +69,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - resources/
+    - assets/sources/logo/
+    - assets/sources/images/
+    - assets/sources/videos/
+    - assets/sources/profiles/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
