--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   dots_indicator: ^4.0.1
   video_player: ^2.10.1
   animated_notch_bottom_bar: ^1.0.3
+  flutter_staggered_grid_view: ^0.7.0
+  # youtube_player_flutter: ^9.1.3
+  youtube_player_iframe: ^5.2.2
+  youtube_player_flutter: ^9.1.3
   
   
 
