--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: harmanapp
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.3
   font_awesome_flutter: ^10.12.0
-  
+  rive: ^0.13.0
   dots_indicator: ^4.0.1
   video_player: ^2.10.1
   animated_notch_bottom_bar: ^1.0.3
@@ -44,9 +44,6 @@ dependencies:
   # youtube_player_flutter: ^9.1.3
   youtube_player_iframe: ^5.2.2
   youtube_player_flutter: ^9.1.3
-  
-  
-
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +61,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -73,7 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-   
+
     - assets/sources/logo/
     - assets/sources/images/
     - assets/sources/videos/
