--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   # youtube_player_flutter: ^9.1.3
   youtube_player_iframe: ^5.2.2
   youtube_player_flutter: ^9.1.3
+  scroll_snap_list: ^0.9.1
 
 dev_dependencies:
   flutter_test:
