--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   youtube_player_iframe: ^5.2.2
   youtube_player_flutter: ^9.1.3
   scroll_snap_list: ^0.9.1
+  video_thumbnail: ^0.5.6
 
 dev_dependencies:
   flutter_test:
