--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   youtube_player_flutter: ^9.1.3
   scroll_snap_list: ^0.9.1
   video_thumbnail: ^0.5.6
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
