--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   scroll_snap_list: ^0.9.1
   video_thumbnail: ^0.5.6
   carousel_slider: ^5.1.1
+  lottie:
 
 dev_dependencies:
   flutter_test:
@@ -72,7 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-
+    - assets/screenshots/
     - assets/sources/logo/
     - assets/sources/images/
     - assets/sources/videos/
