--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,6 @@
 name: harmanapp
 description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
@@ -36,7 +21,6 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.3
   font_awesome_flutter: ^10.12.0
-  rive: ^0.13.0
   dots_indicator: ^4.0.1
   video_player: ^2.10.1
   animated_notch_bottom_bar: ^1.0.3
@@ -48,6 +32,7 @@ dependencies:
   video_thumbnail: ^0.5.6
   carousel_slider: ^5.1.1
   lottie:
+  get: ^4.7.3
 
 dev_dependencies:
   flutter_test:
