ui fixes done in home page and otp screen,appbar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   carousel_slider: ^5.1.1
   lottie:
   get: ^4.7.3
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
