--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   get: ^4.7.3
   flutter_rating_bar: ^4.0.1
   share_plus: ^12.0.1
+  visibility_detector: ^0.4.0
 
 dev_dependencies:
   flutter_test:
