--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   share_plus: ^12.0.1
   visibility_detector: ^0.4.0
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
