--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   share_plus: ^12.0.1
   visibility_detector: ^0.4.0
   image_picker: ^1.2.1
+  reorderables: ^0.6.0
 
 dev_dependencies:
   flutter_test:
