--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   visibility_detector: ^0.4.0
   image_picker: ^1.2.1
   reorderables: ^0.6.0
+  reorderable_grid_view: ^2.2.8
 
 dev_dependencies:
   flutter_test:
